@@ -2,27 +2,36 @@ package org.radarbase.auth.authorization;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
+import java.util.EnumMap;
+import java.util.EnumSet;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Predicate;
+import java.util.stream.Collector;
+import java.util.stream.Stream;
 
-import static org.radarbase.auth.authorization.AuthoritiesConstants.PARTICIPANT;
-import static org.radarbase.auth.authorization.AuthoritiesConstants.PROJECT_ADMIN;
-import static org.radarbase.auth.authorization.AuthoritiesConstants.PROJECT_AFFILIATE;
-import static org.radarbase.auth.authorization.AuthoritiesConstants.PROJECT_ANALYST;
-import static org.radarbase.auth.authorization.AuthoritiesConstants.PROJECT_OWNER;
-import static org.radarbase.auth.authorization.AuthoritiesConstants.SYS_ADMIN;
+import static java.util.stream.Collectors.collectingAndThen;
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.mapping;
+import static java.util.stream.Collectors.toCollection;
+import static org.radarbase.auth.authorization.RoleAuthority.INACTIVE_PARTICIPANT;
+import static org.radarbase.auth.authorization.RoleAuthority.ORGANIZATION_ADMIN;
+import static org.radarbase.auth.authorization.RoleAuthority.PARTICIPANT;
+import static org.radarbase.auth.authorization.RoleAuthority.PROJECT_ADMIN;
+import static org.radarbase.auth.authorization.RoleAuthority.PROJECT_AFFILIATE;
+import static org.radarbase.auth.authorization.RoleAuthority.PROJECT_ANALYST;
+import static org.radarbase.auth.authorization.RoleAuthority.PROJECT_OWNER;
+import static org.radarbase.auth.authorization.RoleAuthority.SYS_ADMIN;
 
 /**
  * Created by dverbeec on 22/09/2017.
  */
 public final class Permissions {
 
-    private static final Map<Permission, Set<String>> PERMISSION_MATRIX = new HashMap<>();
+    private static final Map<Permission, Set<RoleAuthority>> PERMISSION_MATRIX;
 
     static {
-        initPermissions();
+        PERMISSION_MATRIX = createPermissions();
     }
 
     private Permissions() {
@@ -31,16 +40,12 @@ public final class Permissions {
 
     /**
      * Look up the allowed authorities for a given permission. Authorities are String constants that
-     * appear in {@link AuthoritiesConstants}.
+     * appear in {@link RoleAuthority}.
      * @param permission The permission to look up.
      * @return An unmodifiable view of the set of allowed authorities.
      */
-    public static Set<String> allowedAuthorities(Permission permission) {
-        if (PERMISSION_MATRIX.containsKey(permission)) {
-            return Collections.unmodifiableSet(PERMISSION_MATRIX.get(permission));
-        } else {
-            return Collections.emptySet();
-        }
+    public static Set<RoleAuthority> allowedRoles(Permission permission) {
+        return PERMISSION_MATRIX.getOrDefault(permission, Set.of());
     }
 
     /**
@@ -50,77 +55,118 @@ public final class Permissions {
      * permission.</p>
      * @return An unmodifiable view of the permission matrix.
      */
-    public static Map<Permission, Set<String>> getPermissionMatrix() {
-        return Collections.unmodifiableMap(PERMISSION_MATRIX);
+    public static Map<Permission, Set<RoleAuthority>> getPermissionMatrix() {
+        return PERMISSION_MATRIX;
     }
 
     /**
      * Static permission matrix based on the currently agreed upon security rules.
      */
-    private static void initPermissions() {
-        Permission.allPermissions().forEach(p -> PERMISSION_MATRIX.put(p, new HashSet<>()));
+    private static Map<Permission, Set<RoleAuthority>> createPermissions() {
+        Map<RoleAuthority, Stream<Permission>> rolePermissions = new EnumMap<>(
+                RoleAuthority.class);
 
-        /* System Administrator - has all currently defined permissions */
-        PERMISSION_MATRIX.values().forEach(s -> s.add(SYS_ADMIN));
+        // System admin can do everything.
+        rolePermissions.put(SYS_ADMIN, Permission.stream());
+
+        // Organization admin can do most things, but not view subjects or measurements
+        rolePermissions.put(ORGANIZATION_ADMIN, Permission.stream()
+                .filter(excludePermissions(Permission.ORGANIZATION_CREATE))
+                .filter(excludeEntities(Permission.Entity.AUDIT,
+                        Permission.Entity.AUTHORITY, Permission.Entity.MEASUREMENT))
+                .filter(excludePermissions(Permission.SOURCEDATA_CREATE,
+                        Permission.SOURCETYPE_CREATE)));
 
         // for all authorities except for SYS_ADMIN, the authority is scoped to a project, which
         // is checked elsewhere
         // Project Admin - has all currently defined permissions except creating new projects
         // Note: from radar-auth:0.5.7 we allow PROJECT_ADMIN to create measurements.
         // This can be done by uploading data through the web application.
-        PERMISSION_MATRIX.entrySet().stream()
-            .filter(e -> e.getKey() != Permission.PROJECT_CREATE)
-            .forEach(e -> e.getValue().add(PROJECT_ADMIN));
+        rolePermissions.put(PROJECT_ADMIN, Permission.stream()
+                .filter(excludeEntities(
+                        Permission.Entity.AUDIT,
+                        Permission.Entity.AUTHORITY))
+                .filter(excludeOtherEntityOperations(
+                        Permission.Entity.ORGANIZATION, Permission.Operation.READ))
+                .filter(excludePermissions(Permission.PROJECT_CREATE)));
 
         /* Project Owner */
         // CRUD operations on subjects to allow enrollment
-        PERMISSION_MATRIX.entrySet().stream()
-            .filter(e -> e.getKey().getEntity() == Permission.Entity.SUBJECT)
-            .forEach(e -> e.getValue().add(PROJECT_OWNER));
-
-        // can also read all other things except users, audits and authorities
-        PERMISSION_MATRIX.entrySet().stream()
-            .filter(e -> !Arrays.asList(Permission.Entity.AUDIT, Permission.Entity.AUTHORITY,
-                Permission.Entity.USER)
-                .contains(e.getKey().getEntity()))
-            .filter(e -> e.getKey().getOperation() == Permission.Operation.READ)
-            .forEach(e -> e.getValue().add(PROJECT_OWNER));
+        rolePermissions.put(PROJECT_OWNER, Permission.stream()
+                .filter(excludeEntities(
+                        Permission.Entity.AUDIT,
+                        Permission.Entity.AUTHORITY,
+                        Permission.Entity.USER))
+                .filter(excludeOtherEntityOperations(
+                        Permission.Entity.ORGANIZATION, Permission.Operation.READ))
+                .filter(excludePermissions(Permission.PROJECT_CREATE)));
 
         /* Project affiliate */
         // Create, read and update participant (no delete)
-        PERMISSION_MATRIX.entrySet().stream()
-            .filter(e -> e.getKey().getEntity() == Permission.Entity.SUBJECT)
-            .filter(e -> e.getKey().getOperation() != Permission.Operation.DELETE)
-            .forEach(e -> e.getValue().add(PROJECT_AFFILIATE));
-
-        // can also read all other things except users, audits and authorities
-        PERMISSION_MATRIX.entrySet().stream()
-            .filter(e -> !Arrays.asList(Permission.Entity.AUDIT, Permission.Entity.AUTHORITY,
-                Permission.Entity.USER)
-                .contains(e.getKey().getEntity()))
-            .filter(e -> e.getKey().getOperation() == Permission.Operation.READ)
-            .forEach(e -> e.getValue().add(PROJECT_AFFILIATE));
+        rolePermissions.put(PROJECT_AFFILIATE, Permission.stream()
+                .filter(excludeEntities(
+                        Permission.Entity.AUDIT,
+                        Permission.Entity.AUTHORITY,
+                        Permission.Entity.USER))
+                .filter(excludeOtherEntityOperations(
+                        Permission.Entity.ORGANIZATION, Permission.Operation.READ))
+                .filter(excludeOtherEntityOperations(
+                        Permission.Entity.PROJECT, Permission.Operation.READ))
+                .filter(excludePermissions(
+                        Permission.SUBJECT_DELETE)));
 
         /* Project analyst */
         // Can read everything except users, authorities and audits
-        PERMISSION_MATRIX.entrySet().stream()
-            .filter(e -> !Arrays.asList(Permission.Entity.AUDIT, Permission.Entity.AUTHORITY,
-                Permission.Entity.USER)
-                .contains(e.getKey().getEntity()))
-            .filter(e -> e.getKey().getOperation() == Permission.Operation.READ)
-            .forEach(e -> e.getValue().add(PROJECT_ANALYST));
-
-        // Can add metadata to sources
-        PERMISSION_MATRIX.get(Permission.SOURCE_UPDATE).add(PROJECT_ANALYST);
+        rolePermissions.put(PROJECT_ANALYST, Permission.stream()
+                .filter(excludeEntities(
+                        Permission.Entity.AUDIT,
+                        Permission.Entity.AUTHORITY,
+                        Permission.Entity.USER))
+                // Can add metadata to sources, only read other things.
+                .filter(p -> p.getOperation() == Permission.Operation.READ
+                        || p == Permission.SUBJECT_UPDATE));
 
         /* Participant */
         // Can update and read own data and can read and write own measurements
-        Arrays.asList(Permission.SUBJECT_READ, Permission.SUBJECT_UPDATE,
-                Permission.MEASUREMENT_CREATE, Permission.MEASUREMENT_READ)
-                        .forEach(p -> PERMISSION_MATRIX.get(p).add(PARTICIPANT));
+        rolePermissions.put(PARTICIPANT, Stream.of(
+                Permission.SUBJECT_READ,
+                Permission.SUBJECT_UPDATE,
+                Permission.MEASUREMENT_CREATE,
+                Permission.MEASUREMENT_READ));
 
         /* Inactive participant */
         // Doesn't have any permissions
+        rolePermissions.put(INACTIVE_PARTICIPANT, Stream.empty());
 
+        // invert map
+        return Collections.unmodifiableMap(
+                rolePermissions.entrySet().stream()
+                        .flatMap(rolePerm -> rolePerm.getValue()
+                                .map(p -> Map.entry(p, rolePerm.getKey())))
+                        .collect(groupingBy(
+                                Map.Entry::getKey,
+                                () -> new EnumMap<>(Permission.class),
+                                mapping(Map.Entry::getValue, toUnmodifiableEnumSet()))));
+    }
+
+    private static Collector<RoleAuthority, ?, Set<RoleAuthority>>
+            toUnmodifiableEnumSet() {
+        return collectingAndThen(
+                toCollection(() -> EnumSet.noneOf(RoleAuthority.class)),
+                Collections::unmodifiableSet);
+    }
+
+    private static Predicate<Permission> excludeOtherEntityOperations(
+            Permission.Entity entity,
+            Permission.Operation... operations) {
+        return p -> p.getEntity() != entity || Arrays.asList(operations).contains(p.getOperation());
+    }
+
+    private static Predicate<Permission> excludePermissions(Permission... permissions) {
+        return p -> !Arrays.asList(permissions).contains(p);
+    }
+
+    private static Predicate<Permission> excludeEntities(Permission.Entity... entities) {
+        return p -> !Arrays.asList(entities).contains(p.getEntity());
     }
 }
